# kaggle

./: docker-compose.yml  pyproject.toml
cloud_storage/: s3_retrieval.py  sample.py  upload_file_to_s3.py
sqitch/: sqitch.conf  sqitch.plan
sqitch/deploy/: sample.sql
sqitch/revert/: sample.sql
sqitch/verify/: sample.sql
