[tool.poetry]
name = "etl-pipepline"
version = "0.1.0"
description = "pipeline"
authors = ["Juan Cruz <jcruzseng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
boto3 = "^1.34.117"
psycopg2 = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
